<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">

        <RelativeLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_name"
                android:layout_marginTop="10dp"
                android:text="@string/description_country"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/country"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/coord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country"
                android:layout_marginTop="10dp"
                android:text="@string/description_coordinates"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/city_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/coord"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/city_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_lat"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/coord"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_lon"
                android:layout_marginTop="10dp"
                android:text="@string/description_reading"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/city_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_lon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reading"
                android:layout_marginTop="10dp"
                android:text="@string/description_temperatures"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/temp_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temperature"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_day"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_min"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_max"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp_eve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_night"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp_morn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_eve"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/reading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_morn"
                android:layout_marginTop="10dp"
                android:text="@string/description_pressure"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/temp_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_morn"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/pressure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pressure"
                android:layout_marginTop="10dp"
                android:text="@string/description_humidity"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/temp_hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_press"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/humidity"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>